add swagger annotations, unit and feature tests for updateProject route
